<resources>
    <string name="app_name">FitnessApp</string>

    <string name="fragment_splash_your_health_label">Your Health</string>

    <string name="fragment_entry_signing_up_label">Зарегистрироваться</string>
    <string name="fragment_entry_log_in_label">Войти</string>
    <string name="fragment_entry_email_hint">Email</string>
    <string name="fragment_entry_name_hint">Имя</string>
    <string name="fragment_entry_lastname_hint">Фамилия</string>
    <string name="fragment_entry_password_hint">Пароль</string>
    <string name="fragment_entry_repeat_password_hint">Повторить пароль</string>

    <string name="fragment_main_open_navigation_label">Открыть</string>
    <string name="fragment_main_close_navigation_label">Закрыть</string>
    <string name="fragment_main_exit_label">Выход</string>


    <string name="navigation_drawer_menu_item_main">Главный экран</string>
    <string name="navigation_drawer_menu_item_notification">Напоминания</string>

    <string name="fragment_notification_exit_label">Выход</string>

    <string name="fragment_notification_dialog_choose_day_label">Выбрать день</string>
    <string name="fragment_notification_dialog_chosen_day_pattern_text">%d.%d.%d</string>
    <string name="fragment_notification_dialog_choose_time_label">Выбрать время</string>
    <string name="fragment_notification_dialog_chosen_time_pattern_text">%d:%d</string>
    <string name="fragment_notification_dialog_create_notification_label">Создать</string>
    <string name="fragment_notification_dialog_notification_edittext_hint_label">
        Пожалуйста, введите текст \nуведомления.</string>

    <string name="fragment_jogging_start_label">Старт</string>
    <string name="fragment_jogging_finish_label">Финиш</string>
    <string name="fragment_jogging_time_template">00:00:00</string>

    <string name="fragment_track_exit_label">Выход</string>

    <string name="layout_popup_window_error_text">Пожалуйста, проверьте интернет соединение.
    </string>
    <string name="layout_popup_window_restart_app_text">Пожалуйста, проверьте интернет соединение и
        перезапустите приложение.</string>
    <string name="layout_popup_window_main_fragment_text">Главный экран</string>

    <string name="layout_track_list_item_jogging_time_text">Время пробежки: %d:%d:%d</string>
</resources>