<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".presentation.jogging.JoggingFragment">

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_padding"
        android:text="@string/fragment_jogging_time_template"
        android:visibility="gone"
        android:textAlignment="center"
        android:textColor="@color/red_tamarillo"
        android:textSize="@dimen/large_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStart"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:backgroundTint="@color/blue_torea_bay"
        android:text="@string/fragment_jogging_start_label"
        android:textAllCaps="false"
        android:textColor="@color/grey_bon_jour"
        android:textSize="@dimen/big_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFinish"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:visibility="gone"
        android:backgroundTint="@color/blue_torea_bay"
        android:text="@string/fragment_jogging_finish_label"
        android:textAllCaps="false"
        android:textSize="@dimen/small_text_size" />

    <TextView
        android:id="@+id/tvDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/medium_padding"
        android:textSize="@dimen/medium_text_size"/>
</LinearLayout>